--- a/resources.html
+++ b/resources.html
@@ -12,10 +12,10 @@
 		<link rel="modulepreload" href="./_app/immutable/entry/app.33dc3770.js">
 		<link rel="modulepreload" href="./_app/immutable/chunks/index.0719bd3d.js">
 		<link rel="modulepreload" href="./_app/immutable/nodes/0.839c5ede.js">
-		<link rel="modulepreload" href="./_app/immutable/nodes/2.94aeeab8.js">
+		<link rel="modulepreload" href="./_app/immutable/nodes/3.3599935b.js">
 	</head>
 	<body data-sveltekit-preload-data="hover">
-		<div style="display: contents">  <h1 data-svelte-h="svelte-yyjjjs">Welcome to SvelteKit</h1> <p data-svelte-h="svelte-jl9sbz">Visit <a href="https://kit.svelte.dev">kit.svelte.dev</a> to read the documentation</p> 
+		<div style="display: contents">  <h1 data-svelte-h="svelte-qhgv09">resources</h1> 
 			
 			<script>
 				{
@@ -33,7 +33,7 @@
 						import("./_app/immutable/entry/app.33dc3770.js")
 					]).then(([kit, app]) => {
 						kit.start(app, element, {
-							node_ids: [0, 2],
+							node_ids: [0, 3],
 							data,
 							form: null,
 							error: null
