build latest changes

--- a/resources.html
+++ b/resources.html
@@ -6,10 +6,10 @@
 		<meta name="viewport" content="width=device-width" />
 		
 		<link href="./_app/immutable/assets/0.a29e5678.css" rel="stylesheet">
-		<link rel="modulepreload" href="./_app/immutable/entry/start.6f6cd213.js">
+		<link rel="modulepreload" href="./_app/immutable/entry/start.3b11ab6c.js">
 		<link rel="modulepreload" href="./_app/immutable/chunks/scheduler.e108d1fd.js">
-		<link rel="modulepreload" href="./_app/immutable/chunks/singletons.c3bb1dde.js">
-		<link rel="modulepreload" href="./_app/immutable/entry/app.33dc3770.js">
+		<link rel="modulepreload" href="./_app/immutable/chunks/singletons.35a319b8.js">
+		<link rel="modulepreload" href="./_app/immutable/entry/app.e5b673d6.js">
 		<link rel="modulepreload" href="./_app/immutable/chunks/index.0719bd3d.js">
 		<link rel="modulepreload" href="./_app/immutable/nodes/0.839c5ede.js">
 		<link rel="modulepreload" href="./_app/immutable/nodes/3.3599935b.js">
@@ -19,7 +19,7 @@
 			
 			<script>
 				{
-					__sveltekit_16gzbwy = {
+					__sveltekit_1q3il1y = {
 						base: new URL(".", location).pathname.slice(0, -1),
 						env: {}
 					};
@@ -29,8 +29,8 @@
 					const data = [null,null];
 
 					Promise.all([
-						import("./_app/immutable/entry/start.6f6cd213.js"),
-						import("./_app/immutable/entry/app.33dc3770.js")
+						import("./_app/immutable/entry/start.3b11ab6c.js"),
+						import("./_app/immutable/entry/app.e5b673d6.js")
 					]).then(([kit, app]) => {
 						kit.start(app, element, {
 							node_ids: [0, 3],
