--- a/index.html
+++ b/index.html
@@ -6,20 +6,20 @@
 		<meta name="viewport" content="width=device-width" />
 		
 		<link href="./_app/immutable/assets/0.a29e5678.css" rel="stylesheet">
-		<link rel="modulepreload" href="./_app/immutable/entry/start.6f6cd213.js">
+		<link rel="modulepreload" href="./_app/immutable/entry/start.3b11ab6c.js">
 		<link rel="modulepreload" href="./_app/immutable/chunks/scheduler.e108d1fd.js">
-		<link rel="modulepreload" href="./_app/immutable/chunks/singletons.c3bb1dde.js">
-		<link rel="modulepreload" href="./_app/immutable/entry/app.33dc3770.js">
+		<link rel="modulepreload" href="./_app/immutable/chunks/singletons.35a319b8.js">
+		<link rel="modulepreload" href="./_app/immutable/entry/app.e5b673d6.js">
 		<link rel="modulepreload" href="./_app/immutable/chunks/index.0719bd3d.js">
 		<link rel="modulepreload" href="./_app/immutable/nodes/0.839c5ede.js">
-		<link rel="modulepreload" href="./_app/immutable/nodes/2.94aeeab8.js">
+		<link rel="modulepreload" href="./_app/immutable/nodes/2.a5478a5a.js">
 	</head>
 	<body data-sveltekit-preload-data="hover">
-		<div style="display: contents">  <h1 data-svelte-h="svelte-yyjjjs">Welcome to SvelteKit</h1> <p data-svelte-h="svelte-jl9sbz">Visit <a href="https://kit.svelte.dev">kit.svelte.dev</a> to read the documentation</p> 
+		<div style="display: contents">  <h1 data-svelte-h="svelte-vg8089">Nothing to see here</h1> 
 			
 			<script>
 				{
-					__sveltekit_16gzbwy = {
+					__sveltekit_1q3il1y = {
 						base: new URL(".", location).pathname.slice(0, -1),
 						env: {}
 					};
@@ -29,8 +29,8 @@
 					const data = [null,null];
 
 					Promise.all([
-						import("./_app/immutable/entry/start.6f6cd213.js"),
-						import("./_app/immutable/entry/app.33dc3770.js")
+						import("./_app/immutable/entry/start.3b11ab6c.js"),
+						import("./_app/immutable/entry/app.e5b673d6.js")
 					]).then(([kit, app]) => {
 						kit.start(app, element, {
 							node_ids: [0, 2],
